--- a/_config.yml
+++ b/_config.yml
@@ -20,13 +20,13 @@ darkmode: true
 
 # Social links
 #twitter_username: jekyllrb
-github_username:  https://github.com/jakshaym1234
+github_username:  jakshaym1234
 #stackoverflow_username: "00000001"
 #dribbble_username: jekyll
 #facebook_username: jekyll
 #flickr_username: jekyll
 #instagram_username: jekyll
-linkedin_username: https://www.linkedin.com/in/akshay-mathew-joseph-1b5976b0/
+linkedin_username: akshay-mathew-joseph-1b5976b0
 #xing_username: jekyll
 #pinterest_username: jekyll
 #youtube_username: jekyll
