--- a/_config.yml
+++ b/_config.yml
@@ -50,10 +50,12 @@ additional_links:
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: Directory of profile image (eg. images/profile.jpg)
+about_profile_image: JOHN1422.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
-
+  #Write an awesome description about yourself here, this supports markdown, so you can add [links](http://foobar.com) and highlight things <mark>like this</mark>.
+  6 Years of Professional experience in DevOps, Configuration Management and expertise in Kubernetes, AWS/Azure/GCP Services and CI/CD tools.
+  Experience in Infrastructure as code (IaC) using Terraform
+  Passionate to work on latest technologies.
   You can even add paragraphs by using empty lines like this and add anything else [markdown](https://www.markdownguide.org/getting-started#what-is-markdown) supports such as
     - Lists
     - Tables
